tests/tc/neg/list02.js
/*@ type nlist  { data : number, 
                  next : nlist } */


/*@ main :: (x:nlist, a:number|boolean) => nlist */
function main(x, a) {

    return { data: a , next: x };

}


